circt-bc260128-00000ac8/origin/arcilator_crash.log
<stdin>:45:10: error: 'arc.state' op operand type mismatch: operand #2
    %3 = comb.mux bin %1#1, %1#0, %shift_reg : !hw.array<4xstruct<valid: i1, data: i8>>
         ^
<stdin>:45:10: note: see current operation: %3 = "arc.state"(%10, %0#1, %1, %0#0, %2) <{arc = @xor_shift_module_arc, latency = 1 : i32, operandSegmentSizes = array<i32: 1, 1, 0, 3, 0>}> : (!seq.clock, i1, i1, !hw.array<4xstruct<valid: i1, data: i8>>, i594086776) -> !hw.array<4xstruct<valid: i1, data: i8>>
<stdin>:45:10: note: expected type: '!hw.array<4xstruct<valid: i1, data: i8>>'
<stdin>:45:10: note:   actual type: 'i594086776'
<stdin>:1:1: error: Failures have been detected while processing an MLIR pass pipeline
module {
^
<stdin>:1:1: note: Pipeline failed while executing [`InferStateProperties` on 'builtin.module' operation]: reproducer generated at `/tmp/crash_reproducer.mlir`
Exit code: 0
